# AI-Release-Guardian

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-design.md  architecture.md  mcp-server-specs.md  risk-model.md  runbook.md
docs/adr/: 001-langgraph-orchestration.md  002-mcp-for-tool-integration.md  003-statistical-regression-detection.md  004-immutable-audit-logging.md
mcp-servers/deploy-history/: deploy_store.py  pyproject.toml  resources.py  server.py  tools.py
mcp-servers/deploy-history/tests/: test_tools.py
mcp-servers/jenkins/: package.json
mcp-servers/jenkins/src/: index.ts  jenkins-api.ts  resources.ts  tools.ts
mcp-servers/perf-baselines/: metrics_store.py  pyproject.toml  resources.py  server.py  tools.py
mcp-servers/test-logs/: package.json
mcp-servers/test-logs/src/: flaky-db.ts  (+3 more)
scripts/: export_audit_log.py  seed_baselines.py  simulate_release.py  train_risk_weights.py  verify_models.py
src/: __init__.py
src/agents/: base_agent.py
src/config/: release_policies.yaml  risk_weights.yaml  settings.py
src/graph/: __init__.py  checkpointer.py  edges.py  workflow.py
src/integrations/: pagerduty.py
src/mcp_clients/: __init__.py  base_client.py  deploy_history_client.py  jenkins_client.py  perf_baselines_client.py  test_logs_client.py
src/models/: __init__.py  build_metadata.py  perf_report.py  release_decision.py  risk_assessment.py  test_report.py
tests/fixtures/: sample_build_metadata.json  sample_test_results.json
tests/integration/: test_api_webhooks.py  test_graph_workflow.py
tests/unit/: test_performance_agent.py  test_policy_engine.py  test_release_decision.py  test_risk_scoring.py  test_test_analyst.py
(+30 files in other folders)
